--- a/src/assets/scss/blocks/main.scss
+++ b/src/assets/scss/blocks/main.scss
@@ -710,6 +710,11 @@
 .main-problems {
 
     .main-problems__content {
+        padding-top: 6.3rem;
+        padding-bottom: 7.7rem;
+        padding-left: 6.1rem;
+        padding-right: 5.5rem;
+        border-bottom: 0.1rem solid #B9B9B9;
 
 
         h2 {
@@ -727,13 +732,16 @@
 
         .main-problems__textContainer {
             display: flex;
+            justify-content: space-between;
+            margin-top: 6.3rem;
 
 
             .main-problems__rightContainer {
                 display: flex;
                 flex-direction: column;
                 gap: 3.5rem;
-                width: 41%;
+                width: 45%;
+                align-items: center;
 
                 .main-problems__title {
                     font-weight: 700;
@@ -755,6 +763,7 @@
             }
 
             .main-problems__leftContainer {
+                width: 45.6%;
 
                 .container1 {
                     font-weight: 400;
@@ -765,6 +774,17 @@
                 }
 
                 .container2 {
+                    margin-top: 2.1rem;
+                    display: flex;
+                    gap: 2rem;
+                    align-items: flex-end;
+
+                    .container4__helper {
+                        flex-direction: column;
+                        width: 73%;
+                        justify-content: space-between;
+                    }
+
                     span:first-child {
                         font-weight: 400;
                         font-size: 1.8rem;
@@ -788,10 +808,12 @@
                     line-height: 130%;
                     text-transform: uppercase;
                     color: #333333;
+                    margin-top: 1.6rem;
                 }
 
                 .container4 {
                     display: flex;
+                    margin-top: 0.7rem;
 
                     .container4__helper {
                         display: flex;
@@ -824,6 +846,11 @@
                 }
 
                 .container5 {
+                    margin-top: 1.8rem;
+                    display: flex;
+                    gap: 1.3rem;
+                    align-items: center;
+
                     span:first-child {
                         font-weight: 400;
                         font-size: 2.4rem;
@@ -842,6 +869,11 @@
                 }
 
                 .container6 {
+                    display: flex;
+                    align-items: flex-start;
+                    gap: 1rem;
+
+
                     span:first-child {
                         font-weight: 400;
                         font-size: 2.4rem;
@@ -860,6 +892,9 @@
                 }
 
                 .container7 {
+                    display: flex;
+                    justify-content: flex-end;
+
                     font-weight: 400;
                     font-size: 1.2rem;
                     line-height: 130%;
@@ -868,6 +903,11 @@
                 }
 
                 .container8 {
+                    margin-top: 0.2rem;
+                    display: flex;
+                    align-items: center;
+                    gap: 0.8rem;
+
                     span:first-child {
                         font-weight: 400;
                         font-size: 2.4rem;
@@ -886,6 +926,10 @@
                 }
 
                 .container9 {
+                    display: flex;
+                    align-items: flex-end;
+                    gap: 0.8rem;
+
                     span:first-child {
                         font-weight: 400;
                         font-size: 2.4rem;
@@ -900,23 +944,30 @@
                         line-height: 130%;
                         text-transform: uppercase;
                         color: #333333;
-                        
+
                     }
                 }
 
                 .container10 {
+                    margin-top: 0.7rem;
+
                     font-weight: 400;
                     font-size: 1.8rem;
                     line-height: 130%;
                     text-transform: uppercase;
                     color: #333333;
+                    margin-top: 0.7rem;
                 }
 
                 .container11 {
+                    margin-top: 0.8rem;
+                    display: flex;
+                    gap: 0.7rem;
+
                     span:first-child {
                         font-weight: 400;
                         font-size: 2.4rem;
-                        line-height: 130%;              
+                        line-height: 130%;
                         text-transform: uppercase;
                         color: #333333;
                     }
@@ -926,11 +977,13 @@
                         font-size: 1.8rem;
                         line-height: 130%;
                         text-transform: uppercase;
-                        color: #333333;    
+                        color: #333333;
                     }
                 }
-                
+
                 .container12 {
+                    margin-top: 0.8rem;
+
                     span:first-child {
                         font-weight: 400;
                         font-size: 1.8rem;
@@ -949,12 +1002,16 @@
                 }
 
                 .container13 {
+                    margin-top: 1.1rem;
+                    display: flex;
+
                     span:first-child {
                         font-weight: 400;
                         font-size: 1.2rem;
                         line-height: 130%;
                         text-transform: uppercase;
                         color: #333333;
+                        width: 40%;
                     }
 
                     span:last-child {
@@ -967,6 +1024,10 @@
                 }
 
                 .container14 {
+                    margin-top: 1.4rem;
+                    display: flex;
+                    gap: 1.4rem;
+
                     span:first-child {
                         font-weight: 400;
                         font-size: 1.8rem;
@@ -986,8 +1047,403 @@
             }
         }
 
+        .brownBtn {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
 
     }
+}
+
+.main-individualCreate {
+
+    .main-individualCreate__contentContainer {
+        padding-top: 6.3rem;
+        padding-bottom: 7rem;
+        border-bottom: 0.1rem solid #B9B9B9;
+
+        h2 {
+            font-weight: 400;
+            font-size: 3.6rem;
+            line-height: 130%;
+            text-align: center;
+            text-transform: uppercase;
+            color: #A6734D;
+
+            span {
+                font-weight: 600;
+            }
+        }
+
+        .main-individualCreate__subTitle {
+            font-weight: 400;
+            font-size: 2.4rem;
+            line-height: 130%;
+            text-align: center;
+            color: #333333;
+            margin-top: 2.7rem;
+        }
+
+        .main-individualCreate__container {
+            display: flex;
+            flex-direction: column;
+            margin-top: 5.3rem;
+            padding-left: 5.5rem;
+            padding-right: 4.9rem;
+            flex-direction: column;
+
+            .main-individualCreate__imgContainer {
+                display: flex;
+                gap: 17.7rem;
+
+                .main-individualCreate__img {
+                    width: 100%;
+                    height: 100%;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+            }
+
+            .main-individualCreate__textContainer {
+                display: flex;
+                gap: 5.5rem;
+                align-items: center;
+
+                .main-individualCreate__text {
+                    font-weight: 400;
+                    font-size: 2.4rem;
+                    line-height: 130%;
+                    text-align: center;
+                    text-transform: uppercase;
+                    color: #333333;
+                    width: 63%;
+
+                    span {
+                        font-weight: 600;
+                    }
+                }
+
+                .brownBtn {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                }
+            }
 
 
+        }
+    }
+}
+
+.main-sellRunLine {
+
+
+    border-bottom: 0.1rem solid #B9B9B9;
+
+    .main-sellRunLine__helper {
+        margin-left: 5.5rem;
+        display: flex;
+        flex-direction: row-reverse;
+        overflow: hidden;
+        gap: 5rem;
+        padding-top: 2.2rem;
+        padding-bottom: 2.7rem;
+    }
+
+    ul {
+        display: flex;
+        gap: 5rem;
+
+        li {
+            font-weight: 400;
+            font-size: 4.2rem;
+            line-height: 130%;
+            text-align: center;
+            text-transform: uppercase;
+            color: #A6734D;
+            list-style-type: disc;
+        }
+
+    }
+}
+
+.main-sell {
+
+    .main-sell__contentContainer {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 6.2rem;
+        padding-left: 9.4rem;
+        padding-right: 7.5rem;
+        padding-bottom: 6.2rem;
+        border-bottom: 0.1rem solid #B9B9B9;
+
+        .main-sell__imgContainer {
+            width: 39%;
+            height: 100%;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+    }
+
+    .main-sell__textContainer {
+        display: flex;
+        flex-direction: column;
+        gap: 5.7rem;
+        align-items: center;
+        margin-top: 3rem;
+
+        h2 {
+            font-weight: 400;
+            font-size: 2.4rem;
+            line-height: 130%;
+            text-align: center;
+            text-transform: uppercase;
+            color: #333333;
+            display: flex;
+            flex-direction: column;
+            gap: 3.3rem;
+
+            span {
+                font-size: 5.8rem;
+            }
+        }
+
+        .brownBtn {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+    }
+}
+
+.main-tester {
+
+    .main-tester__content {
+        display: flex;
+        padding-left: 4.5rem;
+        justify-content: space-between;
+        border-bottom: 0.1rem solid #B9B9B9;
+
+        .main-tester__leftContainer {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 45%;
+            padding-top: 6.7rem;
+
+            h2 {
+                font-weight: 400;
+                font-size: 3.6rem;
+                line-height: 130%;
+                text-align: center;
+                text-transform: uppercase;
+                color: #A6734D;
+
+                span {
+                    font-weight: 700;
+                }
+            }
+
+            .main-tester__subtitle {
+                font-weight: 400;
+                font-size: 3rem;
+                line-height: 130%;
+                text-align: center;
+                color: #A6734D;
+                margin-top: 4.1rem;
+                margin-bottom: 4.7rem;
+            }
+        }
+    }
+}
+
+.main-offline {
+
+    .main-offline__contentContainer {
+        display: flex;
+        justify-content: space-between;
+        border-bottom: 0.1rem solid #B9B9B9;
+
+        .main-offline__leftContainer {
+            width: 50.8%;
+            height: 100%;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+
+        .main-offline__rightContainer {
+            width: 45.6%;
+            padding-top: 3.1rem;
+            padding-right: 3.5rem;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 2.7rem;
+
+            h2 {
+                font-weight: 400;
+                font-size: 3rem;
+                line-height: 130%;
+                color: #A6734D;
+                display: flex;
+                flex-direction: column;
+                gap: 3.9rem;
+            }
+        }
+    }
+}
+
+.main-choise {
+
+    .main-choise__contentContainer {
+        position: relative;
+        padding-bottom: 44.4rem;
+        border-bottom: 0.1rem solid #B9B9B9;
+
+        .main-choise__imgContainer {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            z-index: -1;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+
+        .main-choise__textContainer {
+            display: flex;
+            justify-content: space-between;
+            padding-top: 3.8rem;
+            padding-left: 9.5rem;
+            padding-right: 17.2rem;
+
+            h2 {
+                font-weight: 400;
+                font-size: 3.6rem;
+                line-height: 130%;
+                text-align: center;
+                text-transform: uppercase;
+                color: #333333;
+                width: 65%;
+                padding-top: 2.6rem;
+
+                span {
+                    font-weight: 500;
+                }
+            }
+        }
+    }
+}
+
+.main-questions {
+
+    .main-questions__contentContainer {
+        display: flex;
+        justify-content: space-between;
+
+        .main-questions__imgContainer {
+            width: 42%;
+            height: 100%;
+            margin-left: 5rem;
+            margin-top: 2rem;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+
+        .main-questions__content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 48%;
+            padding-top: 8rem;
+            padding-right: 6rem;
+
+            h2 {
+                font-weight: 500;
+                font-size: 3.6rem;
+                line-height: 130%;
+                text-align: center;
+                color: #A6734D;
+                display: flex;
+                flex-direction: column;
+                gap: 4.5rem;
+
+                span {
+                    text-transform: uppercase;
+                    font-size: 3.6rem;
+                }
+            }
+
+            .main-questions__subtitle {
+                font-weight: 400;
+                font-size: 2rem;
+                line-height: 130%;
+                color: #333333;
+                margin-top: 5.6rem;
+                width: 90%;
+
+                span {
+                    font-weight: 500;
+                }
+            }
+
+            .main-questions__contactsContainer {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-end;
+                width: max-content;
+                margin-top: 5.4rem;
+                gap: 1rem;
+
+                .main-questions__phone {
+                    font-weight: 600;
+                    font-size: 2rem;
+                    line-height: 130%;
+                    color: #333333;
+                    text-decoration: unset;
+                    display: flex;
+                    gap: 1.5rem;
+                    align-items: center;
+
+                    svg {
+                        width: 2.1rem;
+                        height: 2.1rem;
+                    }
+                }
+
+                .main-questions__mail {
+                    font-weight: 600;
+                    font-size: 2rem;
+                    line-height: 130%;
+                    color: #333333;
+                    text-decoration: unset;
+                }
+            }
+        }
+    }
 }
