--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -15,6 +15,10 @@ html {
     font-size: calc(100vw / 1330 * 10);
   }
 
+  @include breakpoint($ff-bp) {
+    font-size: calc(100vw / 1170 * 10);
+  }
+
   @include breakpoint($xl-bp) {
     font-size: calc(100vw / 1024 * 10);
   }
@@ -84,4 +88,9 @@ svg {
 .containerWidth {
   max-width: 117rem;
   margin: 0 auto;
+
+  @include breakpoint($ff-bp) {
+    max-width: unset;
+    margin: unset;
+  }
 }
